fixed menu item spacing issues

--- a/src/main/webapp/WEB-INF/css/admin.css
+++ b/src/main/webapp/WEB-INF/css/admin.css
@@ -107,10 +107,6 @@ button {
 #menu a {
     color: white;
     text-decoration: none;
-    display: block;
-    width: 80px;
-    height: 80px;
-    z-index: 2;
 }
 #menu a:active{
     color: white;
